--- a/0x00-python-hello_world/.vscode/launch.json
+++ b/0x00-python-hello_world/.vscode/launch.json
@@ -6,10 +6,10 @@
       "type": "cppdbg",
       "request": "launch",
       "args": [],
-      "stopAtEntry": true,
+      "stopAtEntry": false,
       "externalConsole": false,
       "cwd": "/home/koko/KOKO/ALX/alx-higher_level_programming/0x00-python-hello_world",
-      "program": "${fileDirname}/${fileBasenameNoExtension}",
+      "program": "/home/koko/KOKO/ALX/alx-higher_level_programming/0x00-python-hello_world/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
