--- a/0x02-python-import_modules/.vscode/launch.json
+++ b/0x02-python-import_modules/.vscode/launch.json
@@ -10,7 +10,7 @@
 			"type": "python",
 			"request": "launch",
 			"program": "${file}",
-			"args": ["dfdfas", "dffdff", "fdfafds"],
+			"args": ["4", "2"],
 			"console": "integratedTerminal",
 			"justMyCode": true
 		}
